@@ -6,10 +6,10 @@ import static seedu.address.logic.Messages.MESSAGE_INVALID_COMMAND_FORMAT;
 import static seedu.address.logic.Messages.MESSAGE_UNKNOWN_COMMAND;
 import static seedu.address.logic.parser.CliSyntax.PREFIX_ASSIGNMENT;
 import static seedu.address.logic.parser.CliSyntax.PREFIX_GRADE;
+import static seedu.address.logic.parser.CliSyntax.SUFFIX_VERBOSE;
 import static seedu.address.testutil.Assert.assertThrows;
 import static seedu.address.testutil.TypicalIndexes.INDEX_FIRST_PERSON;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -78,10 +78,18 @@ public class AddressBookParserTest {
     @Test
     public void parseCommand_find() throws Exception {
         // Fallback behavior: no prefixes -> name keywords
-        List<String> keywords = Arrays.asList("foo", "bar", "baz");
+        List<String> keywords = List.of("foo", "bar", "baz");
         FindCommand command = (FindCommand) parser.parseCommand(
                 FindCommand.COMMAND_WORD + " " + keywords.stream().collect(Collectors.joining(" ")));
-        assertEquals(new FindCommand(new PersonContainsKeywords(keywords, List.of(), List.of(), List.of())), command);
+        assertEquals(new FindCommand(
+                new PersonContainsKeywords(keywords, List.of(), List.of(), List.of()), false),
+                command);
+        FindCommand command1 = (FindCommand) parser.parseCommand(
+                FindCommand.COMMAND_WORD + " " + keywords.stream().collect(Collectors.joining(" "))
+                        + SUFFIX_VERBOSE);
+        assertEquals(new FindCommand(
+                new PersonContainsKeywords(keywords, List.of(), List.of(), List.of()), true),
+                command1);
     }
 
     @Test
