@@ -1,10 +1,10 @@
 package seedu.address.logic.parser;
 
 import static seedu.address.logic.Messages.MESSAGE_INVALID_COMMAND_FORMAT;
+import static seedu.address.logic.parser.CliSyntax.SUFFIX_VERBOSE;
 import static seedu.address.logic.parser.CommandParserTestUtil.assertParseFailure;
 import static seedu.address.logic.parser.CommandParserTestUtil.assertParseSuccess;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
@@ -24,9 +24,9 @@ public class FindCommandParserTest {
     @Test
     public void parse_validArgs_returnsFindCommand() {
         // Fallback: no prefixes -> treat as name keywords
-        List<String> names = Arrays.asList("Alice", "Bob");
+        List<String> names = List.of("Alice", "Bob");
         FindCommand expectedFindCommand =
-                new FindCommand(new PersonContainsKeywords(names, List.of(), List.of(), List.of()));
+                new FindCommand(new PersonContainsKeywords(names, List.of(), List.of(), List.of()), false);
 
         // no leading and trailing whitespaces
         assertParseSuccess(parser, "Alice Bob", expectedFindCommand);
@@ -43,11 +43,23 @@ public class FindCommandParserTest {
         List<String> tgs = List.of("Tutorial 1");
 
         FindCommand expected = new FindCommand(
-                new PersonContainsKeywords(names, emails, tele, tgs));
+                new PersonContainsKeywords(names, emails, tele, tgs), false);
 
         // Note: tele handle prefix is u/
         String input = " n/Alice e/gmail.com u/@alice tg/Tutorial 1";
         assertParseSuccess(parser, input, expected);
+    }
+
+    @Test
+    public void parse_validVerboseArgs_returnsVerboseFindCommand() {
+        // no leading and trailing whitespaces
+        List<String> names = List.of("Alice", "Bob");
+        FindCommand expectedFindCommand =
+                new FindCommand(new PersonContainsKeywords(names, List.of(), List.of(), List.of()), true);
+        assertParseSuccess(parser, "Alice Bob" + SUFFIX_VERBOSE, expectedFindCommand);
+
+        // multiple whitespaces between keywords
+        assertParseSuccess(parser, " \n Alice \n \t Bob  \t" + SUFFIX_VERBOSE, expectedFindCommand);
     }
 
 }
